.happypack/s--1258637194
SyntaxError: Unexpected token, expected , (38:4)

[0m [90m 36 | [39m
 [90m 37 | [39m      dona[33m:[39m [35m12[39m
[31m[1m>[22m[39m[90m 38 | [39m    )}
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 39 | [39m
 [90m 40 | [39m  }
 [90m 41 | [39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (38:4)

[0m [90m 36 | [39m
 [90m 37 | [39m      dona[33m:[39m [35m12[39m
[31m[1m>[22m[39m[90m 38 | [39m    )}
 [90m    | [39m    [31m[1m^[22m[39m
 [90m 39 | [39m
 [90m 40 | [39m  }
 [90m 41 | [39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)